--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,17 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 theme: aero-dual
 
+# Extensions
+## Plugins: http://hexo.io/plugins/
+#RSS订阅
+plugin:
+- hexo-generator-feed
+#Feed Atom
+feed:
+type: atom
+path: atom.xml
+limit: 20
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
