--- a/_config.yml
+++ b/_config.yml
@@ -90,6 +90,6 @@ baidusitemap:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  # repo: git@github.com:shudery/shudery.github.io.git
-  repo: git@git.coding.net:shudery/shudery.git
+  repo: git@github.com:shudery/shudery.github.io.git
+  # repo: git@git.coding.net:shudery/shudery.git
   branch: coding-pages
