--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,6 @@ tag_map:
 category_generator:
   per_page: 10
 
-
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
@@ -62,20 +61,18 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 20
 pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
-## Themes: https://hexo.io/themes/
-# theme: lattice
-theme: aero-dual
+theme: utone
 
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 #RSS订阅`
 plugin:
-- hexo-generator-feed
+  - hexo-generator-feed
 # - hexo-generator-baidu-sitemap
 #Feed Atom
 feed:
@@ -84,7 +81,7 @@ path: atom.xml
 limit: 20
 #sitemap
 # baidusitemap:
-  # path: baidusitemap.xml
+# path: baidusitemap.xml
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
