--- a/_config.yml
+++ b/_config.yml
@@ -54,14 +54,14 @@ category_generator:
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
-## You can customize the date format as defined in
+## You can custmeomize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 20
+per_page: 1000
 pagination_dir: page
 
 # Extensions
@@ -91,3 +91,9 @@ deploy:
   # repo: git@git.coding.net:shudery/shudery.git
   branch: master
   # branch: coding-pages
+
+# social accounts
+github: 'https://github.com/shudery'
+douban: 'https://www.douban.com/people/shudery/'
+zhihu: 'https://www.zhihu.com/people/shudery/activities'
+twitter: 'https://twitter.com/Linshudery'
