--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
-theme: utone
+theme: chic
 
 # Extensions
 ## Plugins: http://hexo.io/plugins/
